--- a/web/src/main/webapp/Vendedor/gestionarVendedor.xhtml
+++ b/web/src/main/webapp/Vendedor/gestionarVendedor.xhtml
@@ -14,7 +14,7 @@
 
             <p:toolbar>
                 <p:toolbarGroup>
-                    <p:commandButton value="Registrar" icon="pi pi-plus" styleClass="ui-button-success me-3" action="#{vendedorBean.crearVendedorDialog()}" update="dialogo_crear" oncomplete="PF('registrar_vendedor').show()" />
+                    <p:commandButton style="background-color: #25cff2;border-color: #25cff2" value="Registrar" icon="pi pi-plus" styleClass="ui-button-success me-3" action="#{vendedorBean.crearVendedorDialog()}" update="dialogo_crear" oncomplete="PF('registrar_vendedor').show()" />
                     <p:commandButton id="boton_borrar" value="#{vendedorBean.mensajeBorrar}" icon="pi pi-trash" disabled="#{vendedorBean.vendedoresSeleccionados.size()==0}" styleClass="ui-button-danger" action="#{vendedorBean.eliminarVendedor()}" update="crud_vendedor:lista_vendedores,@this" />
                 </p:toolbarGroup>
             </p:toolbar>
@@ -83,11 +83,11 @@
                 </p:column>
 
                 <p:column headerText="UPDATE" >
-                    <p:commandButton styleClass="edit-button rounded-button ui-button-success" icon="pi pi-pencil" style="background-color: forestgreen" action="#{vendedorBean.seleccionarVendedores(vendedor)}" oncomplete="PF('actualizar_vendedor').show()" update="dialogo_actualizar"/>
+                    <p:commandButton styleClass="edit-button rounded-button ui-button-success" icon="pi pi-pencil" style="background-color: #25cff2" action="#{vendedorBean.seleccionarVendedores(vendedor)}" oncomplete="PF('actualizar_vendedor').show()" update="dialogo_actualizar"/>
                 </p:column>
 
                 <p:column headerText="AFILIAR" >
-                    <p:commandButton styleClass="edit-button rounded-button ui-button-success" icon="pi pi-check" style="background-color: darkcyan;" action="#{vendedorBean.seleccionarVendedores(vendedor)}" oncomplete="PF('afiliar_vendedor').show()" update="dialogo_afiliar"/>
+                    <p:commandButton styleClass="edit-button rounded-button ui-button-success" icon="pi pi-check" style="background-color: #159b9b;" action="#{vendedorBean.seleccionarVendedores(vendedor)}" oncomplete="PF('afiliar_vendedor').show()" update="dialogo_afiliar"/>
                 </p:column>
 
 
@@ -145,7 +145,7 @@
 
 
                     </h:panelGrid>
-                    <p:commandButton value="#{vendedorBean.mensajeCrearEditar}" action= "#{vendedorBean.registrarVendedor()}" icon="pi pi-plus-circle" update="@form,crud_vendedor:lista_vendedores"/>
+                    <p:commandButton style="background-color: #25cff2" value="#{vendedorBean.mensajeCrearEditar}" action= "#{vendedorBean.registrarVendedor()}" icon="pi pi-plus-circle" update="@form,crud_vendedor:lista_vendedores"/>
                     <p:growl for="mensaje_registro_vendedor" showDetail="true"/>
 
                 </h:form>
@@ -209,7 +209,7 @@
 
 
                 </h:panelGrid>
-                <p:commandButton value="#{vendedorBean.mensajeCrearEditar}" action= "#{vendedorBean.registrarVendedor()}" icon="pi pi-plus-circle" update="@form,crud_vendedor:lista_vendedores"/>
+                <p:commandButton style="background-color: #25cff2" value="#{vendedorBean.mensajeCrearEditar}" action= "#{vendedorBean.registrarVendedor()}" icon="pi pi-plus-circle" update="@form,crud_vendedor:lista_vendedores"/>
                 <p:growl for="mensaje_registro_vendedor" showDetail="true"/>
 
             </h:form>
