--- a/web/src/main/webapp/menuVendedor.xhtml
+++ b/web/src/main/webapp/menuVendedor.xhtml
@@ -9,8 +9,7 @@
 <ui:composition template="/WEB-INF/template.xhtml">
     <ui:define name="title">INICIO</ui:define>
     <ui:define name="content">
-        <h1 style="color: #cc2658">Contenido de la página de ejemplo INICIO</h1>
-
+        <h:graphicImage style="max-width: 100%" value="resources/imagenes/logocmp.png"></h:graphicImage>
     </ui:define>
 </ui:composition>
 
